# numerical_methods

./: .gitignore  CMakeCache.txt  Copy_of_abstract_method.asv  Copy_of_abstract_method.m  abstract_method.m  adaptiveRK.m  backward_difference_method.m  concrete_method  concrete_method.asv  concrete_method.m  forward_difference_method.asv  forward_difference_method.m  some_test.m  test copy.m  test.m
html/: forward_difference_method.html
notes/: feb_15_2023.html  feb_15_2023.md
numerical_methods/: .~lock.hw_1.odt#  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  euler_main  euler_methods  hw_1.odt  main  numerical_methods  taylor_methods  taylor_simple2
numerical_methods/include/: euler_method.h
numerical_methods/src/: euler_class_main.cpp  euler_main.cpp  euler_method.cpp  euler_methods.cpp  main.cpp  runge_kutta_methods.cpp  taylor_methods.cpp  taylor_simple2.cpp
scripts/: RK4Var.py  RKHomework89.py  error_control.py  fdm_difference_concrete.py  finite_difference_concrete.py  finite_different_method.py  linear_shooting.py  multiple_shooting.py  nonlinear_multiple_shooting.py  problem4_5_3_C.py  problem_4_a.txt  problem_5_a_b_c.txt  problem_6_a.txt  rk_2_a.py  taylor_high_order.py
scripts/final/: finite_different_method_final.py  linear_multiple_shooting_final.py  nonlinear_multiple_shooting_final.py
